--- a/Forsyth_County_2022/income_cliff/cliff_pop_2019.html
+++ b/Forsyth_County_2022/income_cliff/cliff_pop_2019.html
@@ -32,7 +32,7 @@
               }
           },
           title: {
-              text: 'Income Level and FNS Status for Total Population in Buncombe County, NC'
+              text: 'Income Level and FNS Status for Total Population in Forsyth County, NC'
           },
           xAxis: {
               categories: [
@@ -120,15 +120,15 @@
           series: [{
               color: '#f38538',
               name: 'Enrolled in FNS', //from totals_by_fns table in cliff_population_2019.R
-              data: [17152]
+              data: [33196]
           }, {
               color: '#004c89',
               name: 'Below Income Level', //from totals_overall table in cliff_population_2019.R
-              data: [30602]
+              data: [58439]
           }, {
               color: '#478aa1',
               name: 'Above Income Level', //from totals_overall table in cliff_population_2019.R
-              data: [94346]
+              data: [116717]
           }]
 	};
 
@@ -148,7 +148,7 @@
               }
           },
           title: {
-              text: 'Income Level and FNS Status for Total Population in Buncombe County, NC'
+              text: 'Income Level and FNS Status for Total Population in Forsyth County, NC'
           },
           xAxis: {
               categories: [
@@ -236,15 +236,15 @@
           series: [{
               color: '#f38538',
               name: 'Enrolled in FNS', //from totals_by_fns table in cliff_population_2019.R
-              data: [17152]
+              data: [33196]
           }, {
               color: '#004c89',
               name: 'Below Income Level', //from totals_overall table in cliff_population_2019.R
-              data: [30602]
+              data: [58439]
           }, {
               color: '#478aa1',
               name: 'Above Income Level', //from totals_overall table in cliff_population_2019.R
-              data: [94346]
+              data: [116717]
           }]
 	};
 }
@@ -259,7 +259,7 @@
               }
           },
           title: {
-              text: 'Income Level and FNS Status by Household Size in Buncombe County, NC'
+              text: 'Income Level and FNS Status by Household Size in Forsyth County, NC'
           },
           xAxis: {
               categories: [
@@ -355,15 +355,15 @@
           series: [{
               color: '#f38538',
               name: 'Enrolled in FNS', //from totals_by_household_size_foodstamps table in cliff_population_2019.R
-              data: [3002,3724,4071,3440,2915]
+              data: [4377,6186,7482,9236,5915]
           }, {
               color: '#004c89',
               name: 'Below Income Level',
-              data: [9204,7352,5205,5136,3705] //from totals_by_household_size table in cliff_population_2019.R
+              data: [13099,10678,11601,12716,10345] //from totals_by_household_size table in cliff_population_2019.R
           }, {
               color: '#478aa1',
               name: 'Above Income Level',
-              data: [20782,37400,17748,12556,5860] //from totals_by_household_size table in cliff_population_2019.R
+              data: [25715,42088,24738,13656,10520] //from totals_by_household_size table in cliff_population_2019.R
           }]
 	};
 }
@@ -378,14 +378,14 @@
               }
           },
           title: {
-              text: 'Income Level and FNS Status by Race/Ethnicity in Buncombe County, NC'
+              text: 'Income Level and FNS Status by Race/Ethnicity in Forsyth County, NC'
           },
           xAxis: {
               categories: [
-              	'Black/AA, NH',
+              	'Black, non-Hispanic',
               	'Hispanic/Latino',
-              	'Other',
-              	'White, NH'
+              	'Other Race',
+              	'White, non-Hispanic'
                ],
               crosshair: true,
               title: {
@@ -472,15 +472,15 @@
           series: [{
               color: '#f38538',
               name: 'Enrolled in FNS', //from totals_by_race_ethnicity_foodstamps table in cliff_population_2019.R
-              data: [2517,1446,884,12305]
+              data: [16604,6003,1379,9210]
           }, {
               color: '#004c89',
               name: 'Below Income Level',
-              data: [3235,5823,919,20625] //from totals_by_race_ethnicity table in cliff_population_2019.R
+              data: [22010,14869,2181,19379] //from totals_by_race_ethnicity table in cliff_population_2019.R
           }, {
               color: '#478aa1',
               name: 'Above Income Level',
-              data: [5376,4640,2823,81507] //from totals_by_race_ethnicity table in cliff_population_2019.R
+              data: [32132,13604,4446,66535] //from totals_by_race_ethnicity table in cliff_population_2019.R
           }]
 	  };
 	}
