--- a/Forsyth_County_2022/plots/income_diff_hc.html
+++ b/Forsyth_County_2022/plots/income_diff_hc.html
@@ -7,11 +7,11 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <link rel="stylesheet" href="mystyles.css">
 		<style>
 			body {
 				font-family: Sans-Serif;	
 			} 
+			
 			#selections  {
 			  font-family: Sans-Serif;
 			  font-size: 90%;
@@ -36,6 +36,10 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
+        
+      .types {
+        display: none
+      }
 			
 		</style>
 </head>
